Adjust curation links

--- a/index.html
+++ b/index.html
@@ -622,6 +622,7 @@
 				</section>
 
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
+					<h4>Download and Dissect the Reference App</h4>
 					<table>
 						<tr>
 							<td width="70%">
@@ -635,42 +636,47 @@
 						</tr>
 					</table>	
 					<br/>							
-					<h4>https://github.com/forcementor/lwc-dnd-demos</h4>
+					<h8>https://github.com/forcementor/lwc-dnd-demos</h8>
 				</section>
 
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
+					<h4>Learn Standard HTML Fundamentals</h4>
 					<a href="https://pluralsight.pxf.io/C0114" target="_none"> 						
-						<img src="img/craigCourse.png" style="border:none;" />
+						<img src="img/craigCourse.png" style="border:none;" width="60%"/>
 					</a>							
 					<br/>
-					<h4>HTML Fundamentals</h4>
+					<h8>https://pluralsight.pxf.io/C0114</h8>
 				</section>
 
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
+					<h4>Learn about Short-Stopping Handler Events</h4>					
 					<a href="https://medium.com/@jacobwarduk/how-to-correctly-use-preventdefault-stoppropagation-or-return-false-on-events-6c4e3f31aedb" target="_none"> 
 						<img src="img/MediumWard.png" style="border:none;" width="60%"/>
 					</a>
 					<br/>	
-					<h4>Correctly Short-Stopping Events</h4>
+					<h8>Medium.com</h8>					
 				</section>
 
 				<section data-transition="fade-in fade-out"  data-background-image="img/VD2020LogoUpperRight.png">
+					<h4>Read about the Drag and Drop HTML standard </h4>
 					<a href="https://developer.mozilla.org/en-US/docs/Web/API/HTML_Drag_and_Drop_API" target="_none"> 
-						<img src="img/MDNContent.png" style="border:none;" />
+						<img src="img/MDNContent.png" style="border:none;" width="60%"/>
 					</a>
 					<br/>	
-					<h4>Mozilla Developer Network</h4>
+					<h8>Mozilla Developer Network</h8>
 				</section>
 				
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
+					<h4>Watch this LWC Primer</h4>
 					<a href="https://pluralsight.pxf.io/C0066" target="_none"> 						
-						<img src="img/ChuckPbP.png" style="border:none;" />
+						<img src="img/ChuckPbP.png" style="border:none;" width="60%"/>
 					</a>
 					<br/>							
-					<h4>A Lightning Web Components Primer</h4>
+					<h8>https://pluralsight.pxf.io/C0066</h8>
 				</section>
 
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
+					<h4>Visit the Salesfoce Play By Play Gallery</h4>
 					<table>
 						<tr>
 							<td width="70%">
@@ -683,15 +689,16 @@
 							</td>
 						</tr>
 					</table>		
-					<h4>www.sfplaybyplay.com</h4>
+					<h8>www.sfplaybyplay.com</h8>
 				</section>
 
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
+					<h4>Saerch or Filter on Topic, Author, Trailhead Class</h4>
 					<a href="https://www.sfplaybyplay.com" target="_none"> 						
-						<img src="img/PbPTilesCallout.png" width="60%"/>
+						<img src="img/PbPTilesCallout.png" width="50%"/>
 					</a>
 					<br/>							
-					<h4>www.sfplaybyplay.com</h4>
+					<h8>www.sfplaybyplay.com</h8>
 				</section>
 
 				<section style="text-align: left;" data-background-image="img/VD2020LogoUpperRight.png" data-transition="slow">
