--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
 					</h4> 
 					<img src="img/case-picker-JS-datawire.png" width="60%" />
 					</br>
-					<h8>Use @wire to fetch and filter data lists</h8>
+					<h8>Use an @wire function to fetch and filter data lists</h8>
 				</section>
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Master Component: Module<br/>
