Added eBikes app

--- a/index.html
+++ b/index.html
@@ -640,6 +640,15 @@
 				</section>
 
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
+					<h4>Download and Dissect the eBikes App </h4>
+					<a href="https://github.com/trailheadapps/ebikes-lwc" target="_none"> 						
+						<img src="img/eBikes.png" style="border:none;" width="60%"/>
+					</a>							
+					<br/>
+					<h8>https://github.com/trailheadapps/ebikes-lwc</h8>
+				</section>
+
+				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Learn Standard HTML Fundamentals</h4>
 					<a href="https://pluralsight.pxf.io/C0114" target="_none"> 						
 						<img src="img/craigCourse.png" style="border:none;" width="60%"/>
