Adjust background image

--- a/index.html
+++ b/index.html
@@ -62,7 +62,12 @@
 				top: 5px;
 				right: 70px;
 			}
-			
+
+			body {
+				background: url('img/vd_background.png');
+				background-size: 100%;
+			}
+
 		</style>
 
 		<!--[if lt IE 9]>
@@ -81,13 +86,14 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 			
-				<section data-background-size="contain" data-background-image="img/vds1.png" data-transition="slow" >
+				<!-- data-background-size="contain" -->
+				<section data-background-image="img/vds1.png" data-transition="slow" >
 				</section>
 
-				<section data-background-size="contain" data-background-image="img/vds2.png" data-transition="slow" >
+				<section data-background-image="img/vds2.png" data-transition="slow" >
 				</section>
 
-				<section data-background-size="contain" data-background-image="img/vds3.png" data-transition="slow" >
+				<section data-background-image="img/vds3.png" data-transition="slow" >
 				</section>
 
 				<!-- 
@@ -96,7 +102,7 @@
 				</section>
 				-->
 
-				<section data-transition="slide" >
+				<section data-transition="slide" data-background-image="img/vd_background.png">
 					<h3>Don Robins</h3>
 					<p/>
 					<h8>Technical Educator</h8><br/>
@@ -746,10 +752,10 @@
 					</div>
 				</section>
 
-				<section data-background-size="contain" data-background-image="img/vds4.png" data-transition="slow" >
+				<section data-background-image="img/vds4.png" data-transition="slow" >
 				</section>
 
-				<section data-background-size="contain" data-background-image="img/vds5.png" data-transition="slow" >
+				<section  data-background-image="img/vds5.png" data-transition="slow" >
 				</section>
 
 			</div>
