Adjust sequence for survey

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 				</section>
 				-->
 
-				<section data-transition="slide" data-background-image="img/vd_background.png">
+				<section data-transition="slide" >
 					<h3>Don Robins</h3>
 					<p/>
 					<h8>Technical Educator</h8><br/>
@@ -732,8 +732,11 @@
 					<h8>www.sfplaybyplay.com</h8>
 				</section>
 
+				<section data-background-image="img/vds4.png" data-transition="slow" >
+				</section>
+
 				<section style="text-align: left;"  data-transition="slow">
-					<h4 style="color:White">Next Steps:</h4>
+					<h4 style="color:White">Next steps after the survey:</h4>
 					<ul style="color:White">
 						<li>Visit our sponsors!</li>
 						<li>Follow me @donrobins and on Pluralsight.com</li>
@@ -750,9 +753,6 @@
 							<i>https://forcementor.github.io/lwc_dnd_20</i>
 						</a>	
 					</div>
-				</section>
-
-				<section data-background-image="img/vds4.png" data-transition="slow" >
 				</section>
 
 				<section  data-background-image="img/vds5.png" data-transition="slow" >
