Updated the sponsor slides

--- a/index.html
+++ b/index.html
@@ -90,7 +90,10 @@
 				<section data-background-image="img/vds1.png" data-transition="slow" >
 				</section>
 
-				<section data-background-image="img/vds2.png" data-transition="slow" >
+				<section data-background-image="img/vds2_1.png" data-transition="slow" >
+				</section>
+
+				<section data-background-image="img/vds2_2.png" data-transition="slow" >
 				</section>
 
 				<section data-background-image="img/vds3.png" data-transition="slow" >
