Added short links for localized pages

--- a/index.html
+++ b/index.html
@@ -161,6 +161,8 @@
 							<td>
 								<a href="index_ja.html#/5" target="_none">						
 									<div style="color:Gray">日本語 <img src="img/FlagJapan.png" height="20px" width="35px"/> </div>
+									<br/>
+									bit.ly/lwc_dnd_ja
 								</a>
 							</td>
 							<td>
@@ -169,6 +171,8 @@
 							<td>
 								<a href="index.html#/5" target="_none">					
 									<div style="color:White">English <img src="img/FlagUS.png" height="20px" width="35px"/></div> 	
+									<br/>
+									bit.ly/lwc_dnd
 								</a>
 							</td>
 						</tr>
