--- a/index_ja.html
+++ b/index_ja.html
@@ -162,6 +162,8 @@
 							<td>
 								<a href="index_ja.html#/5" target="_none">						
 									<div style="color:White">日本語 <img src="img/FlagJapan.png" height="20px" width="35px"/> </div>
+									<br/>
+									bit.ly/lwc_dnd_ja
 								</a>
 							</td>
 							<td>
@@ -170,6 +172,8 @@
 							<td>
 								<a href="index.html#/5" target="_none">					
 									<div style="color:Gray">English <img src="img/FlagUS.png" height="20px" width="35px"/></div> 	
+									<br/>
+									bit.ly/lwc_dnd
 								</a>
 							</td>
 						</tr>
