--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
 					<img src="img/lwc_dnd_20qr.png"  style="border:none;" height="50%" width="50%" align="center" />
 					<div >
 						<h4>	
-							<a href="https://forcementor.github.io/lwc_dnd_20">
-								<i>https://forcementor.github.io/lwc_dnd_20</i>
+							<a href="bit.ly/lwc_dnd">
+								<i>bit.ly/lwc_dnd</i>
 							</a>	
 						</h4>		
 					</div>
