--- a/index_ja.html
+++ b/index_ja.html
@@ -145,11 +145,11 @@
 
 				<section data-transition="fade-in fade-out" >
 					<h3>プレゼンテーションのリンクはこちら:</h3>
-					<img src="img/lwc_dnd_20qr.png"  style="border:none;" height="50%" width="50%" align="center" />
+					<img src="img/lwc_dnd_20_jaqr.png"  style="border:none;" height="50%" width="50%" align="center" />
 					<div >
 						<h4>
-							<a href="https://forcementor.github.io/lwc_dnd_20">
-								<i>https://forcementor.github.io/lwc_dnd_20</i>
+							<a href="bit.ly/lwc_dnd_ja">
+								<i>bit.ly/lwc_dnd_ja</i>
 							</a>
 						</h4>		
 					</div>
