Adjust QR and links

--- a/index.html
+++ b/index.html
@@ -821,11 +821,10 @@
 						This presentation is on Github here:
 						<img src="img/lwc_dnd_20qr.png"  style="border:none;" height="25%" width="25%" align="right" />
 					</p>
-					<!-- <h4 style="color:White">Thanks!</h4> -->
 					<div style="font-size: 25px;">
-						<a href="https://forcementor.github.io/lwc_dnd_20">
-							<i>https://forcementor.github.io/lwc_dnd_20</i>
-						</a>	
+						<a href="bit.ly/lwc_dnd">
+							<i>bit.ly/lwc_dnd</i>
+						</a>
 					</div>
 				</section>
 
