--- a/index_ja.html
+++ b/index_ja.html
@@ -815,12 +815,12 @@
 					<br/>
 					<p style="color:White">
 						このプレゼンテーションは Github で閲覧できます 
-						<img src="img/lwc_dnd_20qr.png"  style="border:none;" height="25%" width="25%" align="right" />
+						<img src="img/lwc_dnd_20_jaqr.png"  style="border:none;" height="25%" width="25%" align="right" />
 					</p>
 					<!-- <h4 style="color:White">Thanks!</h4> -->
 					<div style="font-size: 25px;">
-						<a href="https://forcementor.github.io/lwc_dnd_20">
-							<i>https://forcementor.github.io/lwc_dnd_20</i>
+						<a href="bit.ly/lwc_dnd_ja">
+							<i>bit.ly/lwc_dnd_ja</i>
 						</a>
 					</div>
 				</section>
