--- a/index.html
+++ b/index.html
@@ -822,7 +822,7 @@
 						<img src="img/lwc_dnd_20qr.png"  style="border:none;" height="25%" width="25%" align="right" />
 					</p>
 					<div style="font-size: 25px;">
-						<a href="bit.ly/lwc_dnd">
+						<a href="https://bit.ly/lwc_dnd">
 							<i>bit.ly/lwc_dnd</i>
 						</a>
 					</div>
