--- a/index_ja.html
+++ b/index_ja.html
@@ -148,7 +148,7 @@
 					<img src="img/lwc_dnd_20_jaqr.png"  style="border:none;" height="50%" width="50%" align="center" />
 					<div >
 						<h4>
-							<a href="bit.ly/lwc_dnd_ja">
+							<a href="https://bit.ly/lwc_dnd_ja">
 								<i>bit.ly/lwc_dnd_ja</i>
 							</a>
 						</h4>		
@@ -819,7 +819,7 @@
 					</p>
 					<!-- <h4 style="color:White">Thanks!</h4> -->
 					<div style="font-size: 25px;">
-						<a href="bit.ly/lwc_dnd_ja">
+						<a href="https://bit.ly/lwc_dnd_ja">
 							<i>bit.ly/lwc_dnd_ja</i>
 						</a>
 					</div>
